--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node src/index.js",
     "test": "mocha src/**/*.test.js",
-    "lint": "eslint /src",
+    "lint": "eslint src/",
     "prettier": "prettier --check"
   },
   "author": "",
