--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,5 +47,5 @@ jobs:
           ./scripts/deploy.sh
         shell: bash
         env:
-          SERVER: "<SERVER-IP>"
+          SERVER: "139.162.176.49"
           DEPLOY_USER: "github"
