--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,16 @@ jobs:
           npm run lint
           npm run prettier
           
+      - name: Set up ssh
+        run: |
+          mkdir -p ~./ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          echo $SSH_KNOWN_HOSTS > ~/.ssh/known_hosts
+          chmod 600 ~/.ssh/id_rsa
+        env:
+          SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
+          SSH_KNOWN_HOSTS: ${{secrets.SSH_KNOWN_HOSTS}}
+          
       - name: Deploy
         run: |
           ./scripts/deploy.sh
